--- a/game-of-life/src/css/App.css
+++ b/game-of-life/src/css/App.css
@@ -6,7 +6,7 @@
 }
 .buttons {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   width: 30%;
@@ -61,8 +61,62 @@ label input {
   color: #003844;
   height: 1.5rem;
 }
-/* 
-
-
-
-*/
+a {
+  text-decoration: none;
+  color: #003844;
+}
+.about-container {
+  background-image: url("//upload.wikimedia.org/wikipedia/commons/e/e5/Gospers_glider_gun.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+.about-container .text {
+  margin-top: 5%;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 8rem;
+  color: #DD614A;
+  background-color: rgba(112, 128, 144, 0.6);
+  width: 50%;
+  margin: 6rem auto;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.5;
+  text-align: justify;
+}
+.about-container .text h2 {
+  border-bottom: 4px solid #DD614A;
+  padding: 0.5rem;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+.about-container .text .rules {
+  text-align: left;
+}
+.about-container .text .rules h2 {
+  border-bottom: 4px solid #DD614A;
+  padding: 0.5rem;
+  text-align: center;
+}
+.about-container .text .play-game-button {
+  margin: 0 auto;
+  width: 80%;
+  height: 3rem;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-container button {
+  height: 3rem;
+  width: 70%;
+  background-color: black;
+}
+.about-container a {
+  width: 100%;
+  height: 3rem;
+  color: white;
+}
