--- a/game-of-life/src/less/App.less
+++ b/game-of-life/src/less/App.less
@@ -7,7 +7,7 @@
 
 .buttons {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   width: 30%;
@@ -70,10 +70,73 @@ label {
   }
 }
 
+a {
+  text-decoration: none;
+  color: #003844;
+}
 
-/* 
+.about-container {
+  background-image: url("//upload.wikimedia.org/wikipedia/commons/e/e5/Gospers_glider_gun.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  
+  .text {
+    margin-top: 5%;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 8rem;
+    color: #DD614A;
+    background-color: rgba(112, 128, 144, 0.6);
+    width: 50%;
+    margin: 6rem auto;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+    text-align: justify;
+    
+    h2 {
+      border-bottom: 4px solid #DD614A;
+      padding: 0.5rem;
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
+    }
 
+    .rules {
+      text-align: left;
 
+      h2 {
+        border-bottom: 4px solid #DD614A;
+        padding: 0.5rem;
+        text-align: center;
+      }
+    }
 
-*/
+    .play-game-button {
+      margin: 0 auto;
+      width: 80%;
+      height: 3rem;
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+  }
+
+  button {
+    height: 3rem;
+    width: 70%;
+    background-color: black;
+  }
+
+  a {
+    width: 100%;
+    height: 3rem;
+    color: white;
+  }
+
+}
 
